--- a/style.css
+++ b/style.css
@@ -3,22 +3,26 @@ body{
     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-*{
-    box-sizing: border-box;
+@font-face {
+    font-family: bahnschrift;
+    src: url(img/bahnschrift.ttf);
 }
+
 
 .top{
     margin: 0px;
+    border-bottom: solid 5px rgb(241, 113, 66);
 }
 
 header{
     padding-top: 5px;
     margin: 0px;
+    box-sizing: border-box;
 }
 
 .barra-main{
     background-color: #fff83b;
-    padding: 10px;
+    padding: 8px;
 }
 
 .barra-nav{
@@ -27,10 +31,14 @@ header{
 }
 
 .barra-nav-elementos{
-    padding-left: 2%;
-    padding-right: 2%;
+    padding-left: 1.5%;
+    padding-right: 1.5%;
     color: black;
     list-style-type: none;
+    align-self: center;
+    font-size: 25px;
+    font-weight: 900;
+    font-family: bahnschrift;
 }
 
 .barra-nav-elementos.bridge{
@@ -50,6 +58,8 @@ li > a{
 }
 
 footer{
+    border-top: 2.3px solid white;
+    padding-top: 3%;
     display: flex;
 }
 
@@ -82,6 +92,7 @@ footer{
 
 .quick-links ul li{
     text-align: left;
+    list-style-type: disc;
 }
 
 .logo-footer{
@@ -94,7 +105,8 @@ footer{
 }
 
 .bot{
-    background-color: orangered;
+    background-color: rgb(0, 0, 0);
+    color: white;
 }
 
 .content{
@@ -109,4 +121,13 @@ footer{
 
 .content h1{
     text-align: center;
+}
+
+.logo{
+    width: 14vw;
+    align-self: center;
+}
+
+.nav-button{
+    width: 2vw;
 }
