--- a/style.css
+++ b/style.css
@@ -8,6 +8,10 @@ body{
     src: url(img/bahnschrift.ttf);
 }
 
+a, a:hover, a:visited, a:active {
+    color: inherit;
+    text-decoration: none;
+   }
 
 .top{
     margin: 0px;
@@ -97,7 +101,8 @@ footer{
 
 .logo-footer{
     padding-left: 4%;
-    padding-right: 4%;    
+    padding-right: 4%;
+    align-self: center;    
 }
 
 .logo-footer img{
@@ -130,4 +135,42 @@ footer{
 
 .nav-button{
     width: 2vw;
+}
+
+.banner{
+    width: 100%;
+    text-align: center;
+
+}
+
+.banner-section{
+    padding-top: 5%;
+}
+
+.banner-block-main{
+    margin-top: 0px;
+    background-color: #fff83b;
+    color: black;
+    text-align: center;
+}
+
+.banner-block-main h1{
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.banner-section ul{
+    display: flex;
+    justify-content: center;
+    padding-left: 0px;
+    padding-right: 2.5%;
+}
+
+.banner-section ul li img{
+    width: 100%;
+}
+
+.banner-section ul li{
+    padding-left: 2%;
+    list-style-type: none;
 }
