--- a/style.css
+++ b/style.css
@@ -178,3 +178,18 @@ footer{
     font-size: 50px;
     text-align: left;
 }
+
+input[type=text], input[type=password], input[type=email] {
+    width: 20%;
+    padding: 15px;
+    margin: 5px 0 22px 0;
+    display: inline-block;
+    border: none;
+    background: #f1f1f1;
+  }
+
+registro-boton{
+    background-color: orangered;
+    color: white;
+}
+  
