--- a/style.css
+++ b/style.css
@@ -188,8 +188,15 @@ input[type=text], input[type=password], input[type=email] {
     background: #f1f1f1;
   }
 
-registro-boton{
+.registro-boton{
     background-color: orangered;
     color: white;
+    font-size: 17px;
+    padding: 15px;
+}
+
+.block-registro{
+    text-align: center;
+    border: 1px solid white;
 }
   
