--- a/style.css
+++ b/style.css
@@ -264,3 +264,121 @@ input[type=text], input[type=password], input[type=email] {
     letter-spacing: 1px;
     word-spacing: 2px
 }
+
+.concepto{
+    display: flex;
+    border-bottom: solid 1px;
+    padding: 10px;
+
+}
+
+.imagen1 img{
+height: 400px;
+border: 3px solid orangered;
+border-radius: 4px;
+padding: 5px;
+margin-left: 60px;
+
+}
+
+
+.titulo1 {
+    background-color: #fff83b;;
+    margin: 0px;
+    padding: 10px;
+}
+
+.titulo-info1{
+    border-bottom: solid;
+}
+
+.concepto2{
+    list-style: none;
+    margin: 20px;
+}
+.trucos{
+    display: flex; 
+}
+
+.trucos img{
+    margin: auto;
+    display: block;
+}
+
+.trucos li{
+list-style: none;
+margin: 20px;
+background-color: #fff83b;
+color: black;
+margin: 0px;
+font-size: larger;
+}
+.titulo2{
+    text-align: center;
+}
+.trucos2 li{
+    list-style: none;
+    margin: 20px;
+    background-color: #fff83b;
+    color: black;
+    margin: 0px;
+    font-size: larger;
+    padding-bottom: 10px;
+}
+.trucos2{
+    display: flex;
+}
+
+.trucos2 img{
+    margin: auto;
+    display: block;
+}
+.ollie{
+    border: 2px solid orangered;
+    border-radius: 4px;
+    height: fit-content;
+    text-align: justify;
+    padding: 5px;
+
+}
+
+.Nollie{
+    border: 2px solid orangered;
+    border-radius: 4px;
+    height: fit-content;
+    text-align: justify;
+    padding: 5px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.shove-it{
+    border: 2px solid orangered;
+    border-radius: 4px;
+    height: fit-content;
+    text-align: justify;
+    padding: 5px;
+}
+
+.bigspin{
+    border: 2px solid orangered;
+    border-radius: 4px;
+    text-align: left;
+}
+
+.bigspin img{
+    width: 60%;
+}
+
+.fifty{
+    border: 2px solid orangered;
+    border-radius: 4px;
+    text-align: left;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+
+.fifty img{
+    width: 85%;
+}    
+
