--- a/style.css
+++ b/style.css
@@ -472,3 +472,46 @@ td a{
     margin: auto;
 }
 
+.buscar{
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #069;
+    padding: 10px;
+    height: 10px;
+    height: 80px;
+    border-radius: 40px;
+}
+.buscar_texto{
+    border: none;
+    background: none;
+    outline: none;
+    color: white;
+    font-size: 20px;
+    float: left;
+    line-height: 60px;
+    transition: .3s;
+    width: 0;
+}
+.boton{
+    width: 40px;
+    height: 40px;
+    text-decoration: none;
+    color: white;
+    font-size: 30px;
+}
+
+.contenido-busqueda{
+    display: flex;
+}
+@media screen and (min-width:480px){
+    .buscar:hover > .buscar_texto{
+        width: 190px;
+    }
+}
+@media screen and (min-width:1024px){
+    .buscar:hover > .buscar_texto{
+        width: 500px;
+    }
+}
