--- a/style.css
+++ b/style.css
@@ -370,8 +370,9 @@ margin-left: 60px;
     margin-right: 20px;
 }
 
-
- 
+.fifty img{
+    width: 85%;
+}   
 
 .table-crud{
     background-color: white;
