--- a/style.css
+++ b/style.css
@@ -373,6 +373,10 @@ margin-left: 60px;
     width: 85%;
 }   
 
+.concepto2{
+    padding: 2px;
+}
+
 .table-crud{
     background-color: white;
     border: 3px solid rgb(146, 136, 136);
