--- a/style.css
+++ b/style.css
@@ -665,3 +665,51 @@ td a{
 .cover-img{
     margin-left: 15%;
 }
+
+    .content h1{
+        font-size: 40px;
+        text-transform: uppercase;
+    }
+
+    .content p{
+        font-size: 20px;
+        text-align: center;
+        color: yellow;
+    }
+
+    .content2 h2{
+        font-size: 30px;
+        text-transform: uppercase;
+        padding-top: 70px;
+        text-align: center;
+    }
+
+    .content2 p{
+        color: white;
+        left: 300px;
+    }
+
+    .content3{
+        display: block;
+        margin-left: 30%;
+        margin-right: 40%;
+    }
+
+    .content3 h4{
+        padding-top: 40px;
+        text-align: center;
+    }
+
+    .content4 h4{
+        padding-top: 20px;
+    }
+
+    .content4 form{
+        padding-top: 30px;
+        padding-left: 5px;
+    }
+
+    .content5 p{
+        color: white;
+        text-align: center;
+    }
