--- a/contenido/crud/crud.css
+++ b/contenido/crud/crud.css
@@ -4,11 +4,9 @@
 
 .menu p {
 	margin-right: 2rem;
+  padding: 0px;
 	cursor: pointer;
-}
-
-.content {
-	margin-top: 2rem;
+  outline: 3px white;
 }
 
 [data-content] {
@@ -34,3 +32,90 @@ table{
     margin-top: .5rem;
    
   }
+
+
+.inputs {
+  width: 100%;
+  color: white;
+  outline: 3cm;
+}
+
+.button {
+  display: inline-block;
+  width: 100%;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding: 10px;
+  text-align: center;
+}
+
+.add {
+  background-color: green;
+}
+
+.update {
+  background-color: coral;
+}
+
+.table-crud{
+  border-collapse: collapse;
+  background-color: white;
+  color: black;
+  text-align: center;
+  width: 100%;
+  align-self: center;
+}
+
+.table-crud th, td, tr{
+  border: 1px black solid;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.table-crud th{
+  background-color: rgb(207, 175, 32);
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.table-name {
+  padding: 19px;
+  margin-bottom: 0px;
+}
+
+.content-tabs{
+  background-color: black;
+  color: white;
+  margin: 0px;
+}
+
+td input[type=button]{
+  color: white;
+  border: 0px;
+  margin: 2px;
+  padding: 10px;
+}
+
+td input[type=button][value="Editar"]{
+  background-color: rgb(81, 190, 48);
+}
+
+td input[type=button][value="Eliminar"]{
+  background-color: rgb(190, 48, 48);
+}
+
+td a{
+  text-decoration:underline;
+}
+
+.crud-nav{
+  padding-top: 3%;
+  padding-bottom: 3%;
+}
+
+.crud-nav input[type=button]{
+  width: 50%;
+  padding-top: 2%;
+  padding-bottom: 2%;
+  font-size: 30px;
+}
