--- a/style.css
+++ b/style.css
@@ -186,14 +186,19 @@ footer{
     text-align: left;
 }
 
-input[type=text], input[type=password], input[type=email] {
-    width: 20%;
-    padding: 15px;
-    margin: 5px 0 22px 0;
-    display: inline-block;
+input[type=text], input[type=password], input[type=email], input[type=date] {
+    width: 100%;
+    padding: 8px;
+    margin: 5px 0 11px 0;
+    display: grid;
     border: none;
     background: #f1f1f1;
   }
+
+.generic-button{
+    background-color: #aaa;
+    color: black;
+}
 
 .registro-boton{
     background-color: orangered;
@@ -377,63 +382,7 @@ margin-left: 60px;
     padding: 2px;
 }
 
-.table-crud{
-    background-color: white;
-    border: 3px solid rgb(146, 136, 136);
-    color: black;
-    text-align: center;
-    width: 100%;
-    align-self: center;
-}
 
-.table-crud tr{
-    border: 1px solid black;
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
-
-.table-crud th{
-    border: 1px solid black;
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
-
-.table-crud td{
-    border: 1px solid black;
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
-
-td input[type=button]{
-    color: white;
-    border: 0px;
-    margin: 2px;
-    padding: 10px;
-}
-
-td input[type=button][value="Editar"]{
-    background-color: rgb(81, 190, 48);
-}
-
-td input[type=button][value="Eliminar"]{
-    background-color: rgb(190, 48, 48);
-}
-
-td a{
-    text-decoration:underline;
-}
-
-.crud-nav{
-    padding-top: 3%;
-    padding-bottom: 3%;
-}
-
-.crud-nav input[type=button]{
-    width: 50%;
-    padding-top: 2%;
-    padding-bottom: 2%;
-    font-size: 30px;
-}
 
 .nav-contenido ul li{
     list-style-type: none;
@@ -665,51 +614,3 @@ td a{
 .cover-img{
     margin-left: 15%;
 }
-
-    .content h1{
-        font-size: 40px;
-        text-transform: uppercase;
-    }
-
-    .content p{
-        font-size: 20px;
-        text-align: center;
-        color: yellow;
-    }
-
-    .content2 h2{
-        font-size: 30px;
-        text-transform: uppercase;
-        padding-top: 70px;
-        text-align: center;
-    }
-
-    .content2 p{
-        color: white;
-        left: 300px;
-    }
-
-    .content3{
-        display: block;
-        margin-left: 30%;
-        margin-right: 40%;
-    }
-
-    .content3 h4{
-        padding-top: 40px;
-        text-align: center;
-    }
-
-    .content4 h4{
-        padding-top: 20px;
-    }
-
-    .content4 form{
-        padding-top: 30px;
-        padding-left: 5px;
-    }
-
-    .content5 p{
-        color: white;
-        text-align: center;
-    }
