--- a/style.css
+++ b/style.css
@@ -405,6 +405,28 @@ margin-left: 60px;
     margin: auto;
 }
 
+.descripcion-perfil{
+    width: 100%;
+    padding-left: 3%;
+}
+
+.descripcion-perfil form, div{
+    width: 100%;
+    padding-left: 5%;
+}
+
+.descripcion-perfil input{
+    padding: 2%;
+    width: 50%;
+    font-size: 15px;
+}
+
+.descripcion-perfil label{
+    margin-top: 1%;
+    margin-bottom: 1%;
+}
+
+
 .form-descripcion{
     display: flex;
 }
@@ -421,7 +443,6 @@ margin-left: 60px;
     padding: 10px;
     height: 10px;
     height: 80px;
-    border-radius: 40px;
 }
 .buscar_texto{
     border: none;
@@ -507,7 +528,17 @@ margin-left: 60px;
 .input-contenedor{
     margin-bottom: 15px;
     border: 1px solid #aaa;
+    display: flex;
+    justify-content: baseline;
 }
+
+.input-contenedor img{
+    height: fit-content;
+    padding-top: 3.3%;
+    padding-left: 1%;
+    padding-right: 1%;
+}
+
 .iconos{
     min-width: 50px;
     align-items: center;
