--- a/style.css
+++ b/style.css
@@ -410,10 +410,10 @@ margin-left: 60px;
     padding-left: 3%;
 }
 
-.descripcion-perfil form, div{
+/* .descripcion-perfil form, div{
     width: 100%;
     padding-left: 5%;
-}
+} */
 
 .descripcion-perfil input{
     padding: 2%;
