--- a/style.css
+++ b/style.css
@@ -443,15 +443,16 @@ margin-left: 60px;
     padding: 10px;
     height: 10px;
     height: 80px;
+    border-radius: 20px;
 }
 .buscar_texto{
     border: none;
     background: none;
     outline: none;
     color: white;
-    font-size: 20px;
+    font-size: 30px;
     float: left;
-    line-height: 60px;
+    line-height: 70px;
     transition: .3s;
     width: 0;
 }
@@ -483,9 +484,12 @@ margin-left: 60px;
 .contenedor{
     background-color: black;
     width: 100%;
-    height: 100%;
+    height: 80vh;
 }
 
+.content-tabs{
+    padding-top: 4%;
+}
 .contenedor-inicio{
     box-sizing: border-box;
     width: 100%;
@@ -567,14 +571,17 @@ margin-left: 60px;
 .link :hover{
     color: yellow;
 }
+
 @media(min-width:768px)
 {
+    
     .inicio-registro{
         margin: auto;
         width: 500px;
         border-radius: 2%;
     }
 }
+
 .articulo {
     color: #ffffff;
     margin: auto;
@@ -642,4 +649,23 @@ margin-left: 60px;
     margin-left: 15%;
 }
 
+[data-content] {
+	display: none;
+}
+.active[data-content] {
+	display: block;
+}
+.link {
+    cursor: pointer;
+}
 
+/*Buscar*/
+
+.pag{
+    list-style: none;
+    color: black;
+}
+.pag a, a:hover, a:visited, a:active {
+    color: black;
+    text-decoration: none;
+}
